apps/podinfo/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: podinfo-gateway
  namespace: podinfo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - podinfo.j1-lab.xyz
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: podinfo-vs
  namespace: podinfo
spec:
  hosts:
    - podinfo.j1-lab.xyz
  gateways:
    - podinfo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: podinfo
            port:
              number: 9898
